Update and rename css/main.css to CSS/main.css

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -35,6 +35,5 @@ footer {
       background: url(../img/fondofooter.jpg) no-repeat;
       background-size: cover;      
 }
-textarea {
-     width: 100%;
+textarea {width:100%;
 }
